--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,3 +5,4 @@
 <p>Id: <%= id %></p>
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
+<!-- <p>Bio: <%= bio %></p> need to figure out how to display bio-->
