--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,17 +8,30 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <%- include('partials/alerts') %>
 
+    <%- include('partials/alerts') %>
     <% if (!currentUser) { %>
       <li><a href="/auth/signup">Signup</a></li>
       <li><a href="/auth/login">Login</a></li>
+      <li><a href="/">home</a></li>
+      <li><a href="/joke">Joke</a></li>
+      <li><a href="/bot">Bots</a></li>
+
+
   <% } else { %>
       <li><a href="/auth/logout">Logout</a></li>
       <li><a href="/profile">Profile</a></li>
-  <% } %>
+      <li><a href="/">home</a></li>
+      <li><a href="/joke">Joke</a></li>
+      <li><a href="/bot">Bots</a></li>
+    
+
+
   
+  <% } %>
     <%- body %> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  
+
+</body>
 </html>
