--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -5,13 +5,14 @@
 <!-- onclick="randomJoke()" -->
 <h4 class="joke">joke</h4>
 
-<script src="/views/JokeBot1.js">
-    const button = document.querySelector("button");
 
-    button.addEventListener('click',function(){
-    console.log("joke hahahahah");
-});
+<script src="/views/JokeBot1.js">
+   
+   let joke = document.querySelector("h4").textContent;
+   joke.textContent = "How many?"
 </script>
 
 
 // display joke
+<h4>howdy</h4>
+
