--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -1,6 +1,28 @@
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
 
+<body>
 <h1>joke page</h1>
-
+<h4><%= joke1%></h4>
+<h4><%= haha%></h4>
+<h1><%= newJoke %></h1>
 <h3>FUNNY JOKE HAHA</h3>
 
 <button type="button">random joke</button>
+<img src=' <%= background %>' >
+
+
+</body>
+
+<!-- <script>   
+let button = button
+    button.onclick
+    save 
+    to sql
+    then refresh
+    
+    </script> -->
+
