--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -5,8 +5,10 @@
 </head>
 
 <body>
-
+    <h3>jokes</h3>
     <%= Joke_text %>
+    <%= jokeList %>
+ 
 
 
 <button type="button">random joke</button>
