--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,22 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  <body>
+  <body style="background-color: pink;">
+    
 
     <%- include('partials/alerts') %>
     <% if (!currentUser) { %>
-      <li><a href="/auth/signup">Signup</a></li>
-      <li><a href="/auth/login">Login</a></li>
-      <li><a href="/">home</a></li>
-      <li><a href="/joke">Joke</a></li>
+      <li><a href="/auth/signup">Signup /</a><a href="/auth/login"> Login</a></li>
+      <li><a href="/">Joke</a></li>
       <li><a href="/bot">Bots</a></li>
 
 
   <% } else { %>
-      <li><a href="/auth/logout">Logout</a></li>
       <li><a href="/profile">Profile</a></li>
-      <li><a href="/">home</a></li>
-      <li><a href="/joke">Joke</a></li>
+      <li><a href="/">Joke</a></li>
       <li><a href="/bot">Bots</a></li>
     
 
