--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,6 @@
-<h2>Profile Page</h2>
+<title>Profile Page</title>
+<body style="background-color: pink;">
+    <h3 style="text-align: center;">jokes</h3>
 
 <h3>Welcome to your PROFILE</h3>
 
@@ -6,3 +8,6 @@
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
 <!-- <p>Bio: <%= bio %></p> need to figure out how to display bio-->
+
+<li><a href="/auth/logout">Logout</a></li>
+</body>
