--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -3,13 +3,12 @@
 <title>bot page</title>
 
 <div style="position: fixed;top:35%;left: 40%;">
-<button type="button" href="">generate new joke</button>
+<a href="/bot">generate new joke</a>
 <button type="button" href="">submit</button>
 </div>
 
 
 <h3 style="text-align:center;"><%= joketext %></h3>
-
 
 <script>
       let button = document.querySelector("button")[0];
