--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,6 +5,10 @@
 </head>
 
 <body style="background-color: pink;">
+    <form method="GET" action="jokes/new">
+        <input type="submit" value="New Joke">
+    </form>
+   
     <h3 style="text-align: center;">jokes</h3>
     
     <% for( let index = 0; index < jokeList.length; index++ ) { %>
