--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -20,8 +20,10 @@
 <button style="color:red" type="button">Bad Joke...</button>
 <button type="button">random joke</button>
 
+<div>
 
 
+</div>
 </body>
 
 <script>   
