--- a/views/jokes/edit.ejs
+++ b/views/jokes/edit.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="/bot/<%= bot.id %>/?_method=PUT">
+<form method="POST" action="/jokes/edit/<%= joke.id %>/?_method=PUT">
     <label for="name">Name</label>
     <input type="text" name="name" value="<%= Joke.name %>">
   
